# bankiq-decision-agent

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  constants.py  main.py
backend/app/agents/: __init__.py  base_agent.py  data_analyst_agent.py  executive_report_agent.py  general_assistant_agent.py  impact_forecast_agent.py  intent_agent.py  root_cause_agent.py  simple_query_agent.py  triage_agent.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  exceptions.py  logging.py
backend/app/models/: __init__.py  analysis.py  email.py  events.py  impact.py  intent.py  investigation.py  report.py  root_cause.py  triage.py
backend/app/pipeline/: __init__.py  investigation_pipeline.py
backend/app/prompts/: __init__.py  analysis_prompts.py  impact_prompts.py  intent_prompts.py  report_prompts.py  root_cause_prompts.py  triage_prompts.py
backend/app/services/: __init__.py  dataset_repository.py  email_service.py  llm_client.py
backend/data/: branch_operations.csv  customer_metrics.csv  event_log.csv  loan_performance.csv  product_performance.csv  risk_metrics.csv  staffing.csv
backend/scripts/: generate_synthetic_data.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: investigateClient.ts
frontend/src/components/: AgentProgressTracker.tsx  AgentStatusBadge.tsx  ChipEmailInput.tsx  ConfidenceBar.tsx  CopyButton.tsx  EmailReportButton.tsx  (+4 more)
(+15 files in other folders)
