[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bankiq-backend"
version = "1.0.0"
description = "BankIQ — Enterprise Decision Intelligence Agent for banking (FastAPI + Groq + 5-agent pipeline)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BankIQ Engineering" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "tabulate>=0.9",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
